--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   },
   "devDependencies": {
     "prisma": "^5.2.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
