--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-spinner": "^0.2.2",
     "prisma": "^5.2.0"
   },
   "prisma": {
